# lib/api-spec/openapi.yaml
@@ -402,8 +402,10 @@ components:
 
     AdminLoginInput:
       type: object
-      required: [password]
+      required: [username, password]
       properties:
+        username:
+          type: string
         password:
           type: string
 
